prevent overflow

--- a/src/routes/app.css
+++ b/src/routes/app.css
@@ -210,7 +210,3 @@ dialog {
 body:has(#nav_dialog[open]) {
 	overflow: hidden;
 }
-
-.katex {
-	white-space: nowrap;
-}
